fix: guard transaction-bound queries and harden db coercion and SQL parsing